--- a/package.yml
+++ b/package.yml
@@ -13,16 +13,6 @@ matches:
     propagate_case: true
     word: true
 
-  - trigger: "a la carte"
-    replace: "à la carte"
-    propagate_case: true
-    word: true
-
-  - trigger: "a la mode"
-    replace: "à la mode"
-    propagate_case: true
-    word: true
-
   - trigger: "a gogo"
     replace: "à gogo"
     propagate_case: true
@@ -168,7 +158,7 @@ matches:
     propagate_case: true
     word: true
     
-  - trigger: "cafetiere" # added
+  - trigger: "cafetiere"
     replace: "cafétiere"
     propagate_case: true
     word: true    
@@ -198,8 +188,8 @@ matches:
     propagate_case: true
     word: true
 
-  - trigger: "cause celebre"
-    replace: "cause célèbre"
+  - trigger: "celebre"
+    replace: "célèbre"
     propagate_case: true
     word: true
 
@@ -633,8 +623,8 @@ matches:
     propagate_case: true
     word: true
 
-  - trigger: "Grafenberg spot"
-    replace: "Gräfenberg spot"
+  - trigger: "Grafenberg"
+    replace: "Gräfenberg"
     propagate_case: true
     word: true
 
@@ -873,8 +863,8 @@ matches:
     propagate_case: true
     word: true
 
-  - trigger: "numero uno"
-    replace: "número uno"
+  - trigger: "numero"
+    replace: "número"
     propagate_case: true
     word: true
 
@@ -1078,7 +1068,7 @@ matches:
     propagate_case: true
     word: true
 
-  - trigger: "reenter"
+  - trigger: "reenter'"
     replace: "reënter"
     propagate_case: true
     word: true
@@ -1213,7 +1203,7 @@ matches:
     propagate_case: true
     word: true
 
-  - trigger: "uber"
+  - trigger: "uber'"
     replace: "über"
     propagate_case: true
     word: true
